// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resources.common.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/open-edge-platform/infra-core/apiv2/v2/internal/pbapi/resources/common/v1;commonv1";

// A metadata item, represented by a key:value pair.
message MetadataItem {
  // The metadata key.
  string key = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      pattern: "^$|^[a-z.]+/$|^[a-z.]+/[a-z0-9][a-z0-9-_.]*[a-z0-9]$|^[a-z.]+/[a-z0-9]$|^[a-z]$|^[a-z0-9][a-z0-9-_.]*[a-z0-9]$"
      min_len: 0
      max_len: 316
    }
  ];
  // The metadata value.
  string value = 2 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      pattern: "^$|^[a-z0-9]$|^[a-z0-9][a-z0-9._-]*[a-z0-9]$"
      min_len: 0
      max_len: 63
    }
  ];
}

message Timestamps {
  // The time when the resource was created.
  google.protobuf.Timestamp created_at = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];
  // The time when the resource was last updated.
  google.protobuf.Timestamp updated_at = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];
}
